Fixed problem for offcancas cart where the body element shifts over the whole page and nothing can be seen or clicked anymore.

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_misc.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_misc.scss
@@ -160,6 +160,11 @@
     display: -webkit-box !important;
     display: -ms-flexbox !important;
 }
+
+.force-redraw::before {
+    content: ""
+}
+
 //
 // Vars
 // -------------------------------------------------
